<resources>
    <!--Name App-->
    <string name="app_name">Instagram</string>
    <!--Titles-->
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="title_activity_view_create_account">Crear cuenta</string>
    <!--Create Account-->
    <string name="login_username">Nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button_login">Login</string>
    <string name="login_dont_have_account">¿No tiene cuenta?,</string>
    <string name="login_create_here">Crea una aquí</string>
    <!--Create Account-->
    <string name="create_account_email">Correo electrónico</string>
    <string name="create_account_name">Nombres</string>
    <string name="create_account_username">Nombre de usuario</string>
    <string name="create_account_password">Contraseñsa</string>
    <string name="create_account_confirm_password">Confirmar contraseña</string>
    <string name="create_account_button_create">Únete</string>
    <!--Card Picture-->
    <string name="picture_card_nickname">Carl RDJ</string>
    <string name="picture_card_time_ago">Hace</string>
    <string name="picture_card_time_number">10 dias</string>
    <string name="picture_card_likes_number">12</string>
    <string name="picture_card_likes_words">Me Gusta</string>
    <!--Picture Detail-->
    <string name="picture_detail_nickname">Carl RDJ</string>
    <string name="picture_detail_number_likes">12</string>
    <string name="picture_detail_words_likes">Me Gusta</string>
    <string name="picture_detail_title">"Lindo paisaje :D"</string>
    <string name="picture_detail_detail">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <!--Profile-->
    <string name="profile_nickname">Carl RDJ</string>
    <!--Tabs-->
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ivpardviewpicture">PictureTransitionName</string>
    <string name="picture_transition">PictureTransition</string>
    <string name="search_hint">Buscar</string>
</resources>
