<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="190dp"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivCardViewPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:transitionName="@string/picture_transition"
            android:background="@drawable/image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GreyTransparent"
            android:layout_gravity="bottom|end"
            android:orientation="vertical"
            android:padding="@dimen/picture_cardview_linearlayout_padding">
            <TextView
                android:id="@+id/tvCardViewNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="@dimen/picture_cardview_nickname_textview_textsize"
                android:text="@string/picture_card_nickname"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:textSize="@dimen/picture_cardview_time_ago_textview_textsize"
                    android:text="@string/picture_card_time_ago"/>
                <TextView
                    android:id="@+id/tvCardViewTimeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:layout_marginLeft="@dimen/picture_cardview_time_number_textview_paddingleft"
                    android:textSize="@dimen/picture_cardview_time_number_textview_textsize"
                    android:text="@string/picture_card_time_number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selected"/>
                <TextView
                    android:id="@+id/tvCardViewLikesNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:layout_marginLeft="@dimen/picture_cardview_likes_number_textview_paddingleft"
                    android:text="@string/picture_card_likes_number"/>
                <TextView
                    android:id="@+id/tvCardViewLikesWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:layout_marginLeft="@dimen/picture_cardview_likes_words_textview_paddingleft"
                    android:text="@string/picture_card_likes_words"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>